--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@
 
 set -g default-terminal "screen-256color"
 set -g status-utf8 on
+set-option -g set-titles on
+set-option -g set-titles-string "tmux(#I): #W"
 
 set -g status-bg black
 set -g status-fg white
