--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,8 @@ set -g status-right '#[fg=colour235]lu #[fg=yellow]#(ls ~/.mails/lu/INBOX/new | 
 setw -g window-status-format '#[fg=green]#I #[fg=white]#W#[default]  '
 setw -g window-status-current-format '#[bg=white,fg=black]⮀ #W #[bg=black,fg=white]⮀'
 
+bind-key f set -g status
+
 bind-key -n F1 select-window -t 0
 bind-key -n F2 select-window -t 1
 bind-key -n F3 select-window -t 2
