--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,5 @@ bind-key -n F5 select-window -t 4
 bind-key -n F6 select-window -t 5
 bind-key -n F7 select-window -t 6
 bind-key -n F8 select-window -t 7
+
+bind-key r source-file ~/.tmux.conf
