--- a/.muttrc
+++ b/.muttrc
@@ -6,6 +6,7 @@ set folder="~/.mails/"
 set spoolfile="+lu/INBOX"
 set postponed="+postponed"
 set record="+lu/INBOX.Sent"
+set sleep_time = 0 # faster mailbox switching
 
 mailboxes ! +lu/INBOX.Sent +lu/INBOX.Drafts
 mailboxes +htwk/INBOX
