--- a/.env
+++ b/.env
@@ -16,13 +16,17 @@ export TODO="$HOME/d/todo"
 export XDG_AUR_HOME=$HOME/Downloads/aur
 export TZ="Europe/Berlin"
 
-for p in .bin .cabal ruby-1.9.4dev erlang-git ~/.lang_*; do
-	if [ -d "$HOME/$p/bin" ]; then
-		bindir="$HOME/$p/bin"
-	elif [ -d "$p/bin" ]; then
-		bindir="$p/bin"
-	else
-		bindir="$HOME/$p"
-	fi
-	PATH="$bindir:$PATH"
-done
+add_to_path() {
+	for p in $*; do
+		if [ -d "$HOME/$p/bin" ]; then
+			bindir="$HOME/$p/bin"
+		elif [ -d "$p/bin" ]; then
+			bindir="$p/bin"
+		else
+			bindir="$HOME/$p"
+		fi
+		PATH="$bindir:$PATH"
+	done
+}
+add_to_path .bin .cabal ruby-1.9.4dev erlang-git
+add_to_path  ~/.lang_*
