--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ set -g status-right '#[fg=colour235]lu #[fg=yellow]#(ls ~/.mails/lu/INBOX/new | 
 setw -g window-status-format '#[fg=green]#I #[fg=white]#W#[default]  '
 setw -g window-status-current-format '#[bg=white,fg=black]⮀ #W #[bg=black,fg=white]⮀'
 
+set -g status off
 bind-key f set -g status
 
 bind-key -n F1 select-window -t 0
