~/.tmux.conf: Support mouse scrolling.
It's kind of inconvenient because it doesn't allow normal mouse
selection, but we'll see how it works out.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@
 # [stolen tmux.conf]: https://gist.github.com/1689941#file_.tmux.conf
 # [patched fonts]: https://github.com/Lokaltog/vim-powerline/wiki/Patched-fonts
 
+set -g mode-mouse on
+
 set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set-option -g set-titles on
