--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set-option -g set-titles on
 set-option -g set-titles-string "tmux(#I): #W #T"
+set-option -g history-limit 10000
 
 set -g status-bg black
 set -g status-fg white
