~/.env: Add gem binaries for ruby2 to $PATH.

--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ add_to_path() {
 		PATH="$bindir:$PATH"
 	done
 }
-add_to_path .bin .cabal ruby-1.9.4dev erlang-git
+add_to_path .bin .cabal .gem/ruby/2.0.0/bin erlang-git
 add_to_path  ~/.lang_*
