~/.env: set variables necessary for go builds.
used it for building docker. i like that go builds standalone binaries.
i'd like to have something like that for clojure.

--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ add_to_path() {
 }
 add_to_path .bin .cabal .gem/ruby/2.0.0/bin erlang-git
 add_to_path  ~/.lang_*
+
+export GOPATH=$HOME/.go
+export PATH=$GOPATH/bin:$PATH
