~/.tmux.conf: keep old "default-path" behaviour.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ setw -g window-status-current-format '#[bg=white,fg=black]⮀ #W #[bg=black,fg=w
 set -g status off
 bind-key f set -g status
 
+bind-key c neww -c "#{pane_current_path}"
+
 bind-key -n F1 select-window -t 0
 bind-key -n F2 select-window -t 1
 bind-key -n F3 select-window -t 2
