~/.env: fix maven/intellij complaining all the time.

--- a/.env
+++ b/.env
@@ -31,5 +31,7 @@ add_to_path() {
 add_to_path .bin .cabal .gem/ruby/2.0.0/bin erlang-git
 add_to_path  ~/.lang_*
 
+export M2_HOME=/opt/maven
+
 export GOPATH=$HOME/.go
 export PATH=$GOPATH/bin:$PATH
