~/.env: better ruby/gem settings.
and rbenv, of which i don't know whether i will need it, but i guess it
might be useful later on. we'll see.

--- a/.env
+++ b/.env
@@ -28,8 +28,12 @@ add_to_path() {
 		PATH="$bindir:$PATH"
 	done
 }
-add_to_path .bin .cabal .local/bin .gem/ruby/2.1.0/bin erlang-git
+add_to_path .bin .cabal .local/bin erlang-git
 add_to_path  ~/.lang_*
+
+export GEM_HOME=$HOME/.gem/ruby/2.1.0
+export PATH=$HOME/.rbenv/bin:$GEM_HOME/bin:$PATH
+eval "$(rbenv init -)"
 
 export M2_HOME=/opt/maven
 
