--- a/.env
+++ b/.env
@@ -28,8 +28,7 @@ add_to_path() {
 		PATH="$bindir:$PATH"
 	done
 }
-add_to_path .bin .cabal .local/bin erlang-git
-add_to_path  ~/.lang_*
+add_to_path .bin .cabal .local/bin
 
 export GEM_HOME=$HOME/.gem/ruby/2.1.0
 export PATH=$HOME/.rbenv/bin:$GEM_HOME/bin:$PATH
