~/.env: don't override $GOPATH if it was already set

--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ eval "$(rbenv init -)"
 
 export M2_HOME=/opt/maven
 
-export GOPATH=$HOME/.go
+export GOPATH=${GOPATH:-$HOME/.go}
 export PATH=$GOPATH/bin:$PATH
