~/.env: only use rbenv if it's installed
duh.

--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ add_to_path .bin .cabal .local/bin
 
 export GEM_HOME=$HOME/.gem/ruby/2.1.0
 export PATH=$HOME/.rbenv/bin:$GEM_HOME/bin:$PATH
-eval "$(rbenv init -)"
+which rbenv &> /dev/null && eval "$(rbenv init -)"
 
 export M2_HOME=/opt/maven
 
