~/.env: Add ~/.cargo/bin to $PATH

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ add_to_path() {
 		PATH="$bindir:$PATH"
 	done
 }
-add_to_path .bin .cabal .local/bin
+add_to_path .bin .cabal .local/bin .cargo/bin
 
 export GEM_HOME=$HOME/.gem/ruby/2.1.0
 export PATH=$HOME/.rbenv/bin:$GEM_HOME/bin:$PATH
