~/.gitconfig: blame is now (also) praise

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
 	l10 = log -n10
 	lol = log --pretty=oneline --abbrev-commit --graph --decorate
 	ba = branch -a
+	praise = blame
 [format]
 	pretty = %C(magenta)%h%Creset %Cgreen[%cr]%Creset (%an) %s
 [color]
