--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,9 @@
 # [stolen tmux.conf]: https://gist.github.com/1689941#file_.tmux.conf
 # [patched fonts]: https://github.com/Lokaltog/vim-powerline/wiki/Patched-fonts
 
-set -g mode-mouse on
+set -g mouse on
 
 set -g default-terminal "screen-256color"
-set -g status-utf8 on
 set-option -g set-titles on
 set-option -g set-titles-string "tmux(#I): #W #T"
 set-option -g history-limit 10000
