--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,4 +36,7 @@ bind-key -n F6 select-window -t 5
 bind-key -n F7 select-window -t 6
 bind-key -n F8 select-window -t 7
 
+bind-key -T copy-mode-vi ? command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind-key -T copy-mode-vi / command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
+
 bind-key r source-file ~/.tmux.conf
