--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g mouse on
 set -g default-terminal "screen-256color"
 set-option -g set-titles on
 set-option -g set-titles-string "tmux(#I): #W #T"
-set-option -g history-limit 10000
+set-option -g history-limit 1000000
 
 set -g status-bg black
 set -g status-fg white
