~/.tmux.conf: Disable tmux-specific mouse selection in normal mode
The terminal-specific mouse selection (and other mouse-related actions)
are still possible by simply pressing 'Shift' while doing the action.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,5 +39,6 @@ bind-key -n F8 select-window -t 7
 set -g status-keys emacs
 bind-key -T copy-mode-vi ? command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
 bind-key -T copy-mode-vi / command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
+unbind-key -T root MouseDrag1Pane
 
 bind-key r source-file ~/.tmux.conf
