--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g mouse on
 
 set -g default-terminal "screen-256color"
 set-option -g set-titles on
-set-option -g set-titles-string "tmux(#I): #W #T"
+set-option -g set-titles-string "[#I] #W #T"
 set-option -g history-limit 1000000
 
 set -g status-bg black
