--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,14 +27,14 @@ bind-key f set -g status
 
 bind-key c neww -c "#{pane_current_path}"
 
-bind-key -n F1 select-window -t 0
-bind-key -n F2 select-window -t 1
-bind-key -n F3 select-window -t 2
-bind-key -n F4 select-window -t 3
-bind-key -n F5 select-window -t 4
-bind-key -n F6 select-window -t 5
-bind-key -n F7 select-window -t 6
-bind-key -n F8 select-window -t 7
+bind-key -n M-1 select-window -t 0
+bind-key -n M-2 select-window -t 1
+bind-key -n M-3 select-window -t 2
+bind-key -n M-4 select-window -t 3
+bind-key -n M-5 select-window -t 4
+bind-key -n M-6 select-window -t 5
+bind-key -n M-7 select-window -t 6
+bind-key -n M-8 select-window -t 7
 
 bind-key -n C-PageUp select-window -t:-1
 bind-key -n C-PageDown select-window -t:+1
