--- a/.muttrc
+++ b/.muttrc
@@ -8,6 +8,9 @@ set postponed="+postponed"
 set record="+lu/INBOX.Sent"
 set sleep_time = 0 # faster mailbox switching
 
+set alias_file="~/.addresses"
+source ~/.addresses
+
 mailboxes +lu/lu \
           +lu.sprd/lu.sprd \
           +htwk/htwk \
