~/.bin/working-time.go: Track how long I work each day

--- a/.bin/Makefile
+++ b/.bin/Makefile
@@ -1,4 +1,4 @@
-all: rn since timely up ydl
+all: rn since timely up working-time ydl
 
 rn: rn.go
 	go build $<
@@ -11,6 +11,9 @@ timely: timely.go
 
 up: up.c
 	clang -Wall -o up up.c
+
+working-time: working-time.go
+	go build working-time.go
 
 ydl: ydl.go
 	go build ydl.go
