--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
 	lol = log --pretty=oneline --abbrev-commit --graph --decorate
 	ba = branch -a
 	praise = blame
-	recent-tags = ! sh -c 'git tag --sort=-version:refname | head -n5'
+	recent-tags = ! sh -c 'git tag --sort=-authordate | head -n5'
 [format]
 	pretty = %C(magenta)%h%Creset %Cgreen[%cr]%Creset (%an) %s
 [color]
