--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
 	praise = blame
 	recent-tags = ! sh -c 'git tag --sort=-authordate | head -n5'
 [format]
-	pretty = %C(magenta)%h%Creset %Cgreen[%cr]%Creset (%an) %s
+	pretty = %C(auto)%h %Cgreen[%cr]%Creset %C(auto)(%an) %s%d
 [color]
 	ui = auto
 # Some shortcuts
