~/.env: Display man pages from ~/.local/share/man

--- a/.env
+++ b/.env
@@ -37,4 +37,5 @@ which rbenv &> /dev/null && eval "$(rbenv init -)"
 export M2_HOME=/opt/maven
 
 export GOPATH=${GOPATH:-$HOME/.go}
+export MANPATH=$HOME/.local/share/man:$MANPATH
 export PATH=$GOPATH/bin:$PATH
