--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ add_to_path() {
 }
 add_to_path .bin .cabal .local/bin .cargo/bin
 
-export GEM_HOME=$HOME/.gem/ruby/2.1.0
-export PATH=$HOME/.rbenv/bin:$GEM_HOME/bin:$PATH
+export GEM_HOME=$HOME/.gem/ruby/2.6.0
+export PATH=$PATH:$HOME/.rbenv/bin:$GEM_HOME/bin
 which rbenv &> /dev/null && eval "$(rbenv init -)"
 
 export M2_HOME=/opt/maven
