~/.env: Expose ssh socket and use kubectl completion if present

--- a/.env
+++ b/.env
@@ -39,3 +39,9 @@ export M2_HOME=/opt/maven
 export GOPATH=${GOPATH:-$HOME/.go}
 export MANPATH=$HOME/.local/share/man:$MANPATH
 export PATH=$GOPATH/bin:$PATH
+
+export SSH_AUTH_SOCK=/run/user/$UID/keyring/ssh
+
+if which kubectl &> /dev/null; then
+	source <(kubectl completion $(basename $SHELL))
+fi
