--- a/.config/sway/config
+++ b/.config/sway/config
@@ -30,9 +30,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output DP-1 res 2560x1440 pos 0,0
-output LVDS-1 disable
-output LVDS-1 dpms off
+#output DP-1 res 2560x1440 pos 0,0
+#output LVDS-1 disable
+#output LVDS-1 dpms off
 
 ### Idle configuration
 #
@@ -96,6 +96,11 @@ input type:touchpad events disabled
     bindsym $mod+Shift+q exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 
     bindsym $mod+Shift+l exec swaylock --color 000000
+
+    bindsym XF86AudioLowerVolume exec amixer set Master 5%-
+    bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
+    bindsym XF86AudioMute        exec amixer set Master toggle
+
 #
 # Moving around:
 #
