~/.env: Support a per-machine/account ~/.env-local file

--- a/.env
+++ b/.env
@@ -42,6 +42,10 @@ export PATH=$GOPATH/bin:$PATH
 
 export SSH_AUTH_SOCK=/run/user/$UID/keyring/ssh
 
+if [ -f "$HOME/.env-local" ]; then
+	source "$HOME/.env-local"
+fi
+
 if which kubectl &> /dev/null; then
 	source <(kubectl completion $(basename $SHELL))
 fi
