~/.tmux.conf: Add shortcut to do a vertical 20% split
I do this a lot, so let's automate it!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,8 @@ bind-key -n C-PageUp select-window -t:-1
 bind-key -n C-PageDown select-window -t:+1
 bind-key -n C-T new-window -c "#{pane_current_path}"
 
+bind-key -n C-S split-window -v\; resize-pane -y 20
+
 set -g status-keys emacs
 bind-key -T copy-mode-vi ? command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
 bind-key -T copy-mode-vi / command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
