~/.config/sway: Set default layout to "stacking"

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -34,6 +34,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #output LVDS-1 disable
 #output LVDS-1 dpms off
 
+workspace_layout stacking
+
 exec kanshi
 exec_always kanshi
 
