--- a/.config/sway/config
+++ b/.config/sway/config
@@ -108,6 +108,8 @@ input type:touchpad events disabled
     bindsym XF86AudioMute        exec amixer set Master toggle
     bindsym XF86AudioPlay        exec playerctl play-pause
 
+    bindsym $mod+Shift+f exec ~/.bin/toggle-fan
+
 #
 # Moving around:
 #
