~/.config/sway: Use rofimoji as an emoji picker (very nice)

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -111,6 +111,8 @@ input type:touchpad events disabled
     bindsym $mod+Shift+f exec ~/.bin/toggle-fan
     bindsym $mod+Shift+s exec ~/.local/bin/grimshot save area
 
+    bindsym $mod+Insert exec rofimoji # emojis 🥰
+
 #
 # Moving around:
 #
