--- a/.config/sway/config
+++ b/.config/sway/config
@@ -110,7 +110,7 @@ input type:touchpad events disabled
     bindsym XF86AudioPlay        exec playerctl play-pause
 
     bindsym $mod+Shift+f exec ~/.bin/toggle-fan
-    bindsym $mod+Shift+s exec ~/.local/bin/grimshot save area
+    bindsym $mod+Shift+s exec grimshot save area
 
     bindsym $mod+Insert exec rofimoji # emojis 🥰
 
