~/.config/{sway,waybar}: Switch to waybar
It's a bit croweded for now, but has quite a few neat features.

Also contains ~/.bin/tasks, a simplistic current task tracker.  The
current task is also displayed in the statusbar.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -252,15 +252,7 @@ for_window [title="PICO-8"] {
 bar {
     position top
 
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while ~/.config/dwm/status.sh || true; do sleep 15; done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    swaybar_command waybar
 }
 
 include /etc/sway/config.d/*
