~/.config/sway: Control volume using pactl
I had an odd bug where the minimum volume with alsa was jumping a lot.
In addition there was a bug where with pipewire sometimes an output
could not be controlled at all anymore.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -104,9 +104,9 @@ input type:touchpad events disabled
 
     bindsym $mod+Shift+l exec swaylock --color 000000
 
-    bindsym XF86AudioLowerVolume exec amixer set Master 5%-
-    bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
-    bindsym XF86AudioMute        exec amixer set Master toggle
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+    bindsym XF86AudioMute        exec pactl set-sink-mute   @DEFAULT_SINK@ toggle
     bindsym XF86AudioPlay        exec playerctl play-pause
 
     bindsym $mod+Shift+f exec ~/.bin/toggle-fan
