--- a/.config/sway/config
+++ b/.config/sway/config
@@ -109,6 +109,9 @@ input type:touchpad events disabled
     bindsym XF86AudioMute        exec pactl set-sink-mute   @DEFAULT_SINK@ toggle
     bindsym XF86AudioPlay        exec playerctl play-pause
 
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym XF86MonBrightnessUp   exec brightnessctl set 5%+
+
     bindsym $mod+Shift+f exec ~/.bin/toggle-fan
     bindsym $mod+Shift+s exec grimshot save area
 
