~/.config/nvim: Try out switching to nvim

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Make some programs friendlier
-EDITOR=vim
+EDITOR=nvim
 # aka LESS=XFR
 LESS="--no-init --quit-if-one-screen --RAW-CONTROL-CHARS"
 
