--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule ".config/nvim/pack/luna/start/zig.vim"]
 	path = .config/nvim/pack/luna/start/zig.vim
 	url = https://github.com/ziglang/zig.vim
+[submodule ".config/nvim/pack/luna/start/lightspeed.nvim"]
+	path = .config/nvim/pack/luna/start/lightspeed.nvim
+	url = https://github.com/ggandor/lightspeed.nvim
+[submodule ".config/nvim/pack/luna/start/vim-repeat"]
+	path = .config/nvim/pack/luna/start/vim-repeat
+	url = https://github.com/tpope/vim-repeat
