~/.tmux.config: Fix tmux not passing ESC along to helix quickly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ set-option -g set-titles on
 set-option -g set-titles-string "[#I] #W #T"
 set-option -g history-limit 1000000
 
+set -sg escape-time 0  # pass ESC instantly along (without this helix switch to normal mode is slow)
+
 set -g status off
 bind-key f set -g status
 
