~/.config/sway: Fix background image after gnome background changes
Again, for the Nth time.  Maybe I should just commit an image I like
to the repo. 🤔

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -23,7 +23,7 @@ set $menu bemenu-run | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/gnome/adwaita-d.webp fill
+output * bg /usr/share/backgrounds/gnome/blobs-d.svg fill
 
 #
 # Example configuration:
