.{env,gitconfig}: Officially use helix as $EDITOR
Have done that for months, don't miss vim or nvim so far, helix is
just nice and fast.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Make some programs friendlier
-EDITOR=nvim
+EDITOR=helix
 # aka LESS=XFR
 LESS="--no-init --quit-if-one-screen --RAW-CONTROL-CHARS"
 
@@ -39,6 +39,8 @@ export M2_HOME=/opt/maven
 export GOPATH=${GOPATH:-$HOME/.go}
 export MANPATH=$HOME/.local/share/man:$MANPATH
 export PATH=$GOPATH/bin:$PATH
+
+export PPROF_TMPDIR=.pprof
 
 export SSH_AUTH_SOCK=/run/user/$UID/keyring/ssh
 
