~/.env: Clean up env vars a bit

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Make some programs friendlier
-EDITOR=helix
+export EDITOR=helix
+export PAGER=less
 # aka LESS=XFR
-LESS="--no-init --quit-if-one-screen --RAW-CONTROL-CHARS"
+export LESS="--no-init --quit-if-one-screen --RAW-CONTROL-CHARS"
 
 HISTIGNORE="&:ls:exit"
 HISTCONTROL=ignoredups:erasedups
@@ -29,12 +30,6 @@ add_to_path() {
 	done
 }
 add_to_path .bin .cabal .local/bin .cargo/bin
-
-export GEM_HOME=$HOME/.gem/ruby/2.6.0
-export PATH=$PATH:$HOME/.rbenv/bin:$GEM_HOME/bin
-which rbenv &> /dev/null && eval "$(rbenv init -)"
-
-export M2_HOME=/opt/maven
 
 export GOPATH=${GOPATH:-$HOME/.go}
 export MANPATH=$HOME/.local/share/man:$MANPATH
