--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,4 +40,4 @@ bind-key -T copy-mode-vi ? command-prompt -i -I "#{pane_search_string}" -p "(sea
 bind-key -T copy-mode-vi / command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
 unbind-key -T root MouseDrag1Pane
 
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.config/tmux/tmux.conf
