--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -23,14 +23,14 @@
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-        "format": "{usage:00d}% ",
+        "format": "{usage}% ",
     },
     "memory": {
         "format": "{used:0.1f}G "
     },
     "temperature": {
         // "thermal-zone": 2,
-        "hwmon-path": "/sys/class/hwmon/hwmon3/temp1_input",
+        "hwmon-path": "/sys/devices/platform/thinkpad_hwmon/hwmon/hwmon4/temp1_input",
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C",
@@ -77,7 +77,7 @@
         "on-click": "pavucontrol"
     },
     "custom/media": {
-        "format": "{icon}{}",
+        "format": "{icon}{text}",
         "return-type": "json",
         "format-icons": {
             "Playing": " ",
